As a user i must be able to view my balance [Delivers #175528595]
